Finished Profit calculator. Fixed transport units not showing up. Made changes to the calc containers in the CSS.

--- a/public/css/calc.css
+++ b/public/css/calc.css
@@ -156,11 +156,13 @@ input[type=number]::-webkit-outer-spin-button {
     align: center;
     justify: left;
     top: 0;
-    max-width: 75%;
+    width: 75%;
+    max-width: 800px;
+    min-width: 300px;
     margin: 0 auto;
     background-color: #fff;
     padding: 64px;
-    box-shadow: 2px 2px 96px #111;
+    box-shadow: 2px 2px 15px #111;
     border-radius: 8px;
     transition: all 0.3s ease-in;
 
@@ -186,7 +188,7 @@ input[type=number]::-webkit-outer-spin-button {
 
     background-color: #fff;
     padding: 20px;
-    box-shadow: 2px 2px 96px #111;
+    box-shadow: 2px 2px 15px #111;
     border-radius: 8px;
     transition: all 0.3s ease-in;
 
@@ -208,11 +210,11 @@ input[type=number]::-webkit-outer-spin-button {
     top: 20px;
 
     width: 30%;
-    min-width: 250px;
+    min-width: 400px;
 
     background-color: #fff;
     padding: 20px;
-    box-shadow: 2px 2px 96px #111;
+    box-shadow: 2px 2px 15px #111;
     border-radius: 8px;
     transition: all 0.3s ease-in;
 
@@ -237,7 +239,7 @@ input[type=number]::-webkit-outer-spin-button {
 
     background-color: #fff;
     padding: 20px;
-    box-shadow: 2px 2px 96px #111;
+    box-shadow: 2px 2px 15px #111;
     border-radius: 8px;
     transition: all 0.3s ease-in;
 
